statics/styles/style.css
/* ... */
#sidebar-personal-toggle.active
{
    background-position: 0 -16px;
}

#sidebar-personal-button,
#sidebar-logout-button
{
    border: 2px solid #939495;
    padding: 3px;
    position: absolute;
    right: 24px;
    width: 32px;
}

#sidebar-personal-button
{
    height: 32px;
    line-height: 16px;
    top: 48px;
}

#sidebar-logout-button
{
    height: 16px;
    line-height: 16px;
    top: 96px;
}

/**
 * Chat style
 */
#chat
{
    background-position: -128px 0;
    bottom: 0;
    cursor: pointer;
    height: 120px;
    margin: -120px 0 0 830px;
    position: fixed;
    width: 160px;
}

#chat .online-friends
{
    color: #FFFFFF;
    margin: 40px 0 0 85px;
    position: absolute;
    text-align: center;
}

#chat .friendcounts:before
{
    content: '\A';
    white-space: pre;
}

#chat-friend-list
{
    background: #FFFFFF;
    border-radius: 10px;
    bottom: -10px;
    height: 0;
    margin: -120px 0 0 830px;
    max-height: 242px;
    opacity: 0.9;
    padding: 5px;
    position: fixed;
    width: 160px;
}

#chat-friend-list span
{
    height: 20px;
    color: white;
    line-height: 20px;
    border-radius: 10px;
    background: #262a76;
    text-align: center;
    display: block;
    cursor: pointer;
}

#chat-friend-list .scroll-container,
#chat-friend-list-container
{
    height: 180px;
}

#chat-friend-list .friend-list-entry
{
    height: 48px;
    line-height: 48px;
    padding: 3px;
}

#chat-friend-list .friend-list-entry:hover
{
    background: #EEEEEE;
    cursor: pointer;
}

#chat-friend-list .avatar
{
    border: 2px solid #000000;
    height: 44px;
    float: left;
    opacity: 0.3;
    width: 44px;
}

#chat-friend-list .friend-list-entry.online .avatar
{
    opacity: 1;
}

#chat-friend-list .avatar img
{
    margin-left: -10px;
    width: 64px;
}

#chat-friend-list p
{
    margin: 0 0 0 48px;
    padding: 2px 0 2px 4px;
}

#chat-friend-list-search
{
    background-position: -1248px -64px;
    border: 3px solid #D7D7D7;
    height: 20px;
    margin: 5px 0;
    padding: 0 0 0 20px;
    width: 136px;
}

.chat-dialog
{
    background: #FFFFFF;
    bottom: 0px;
    height: 200px;
    margin-right: 10px;
    opacity: 0.9;
    position: fixed;
    width: 160px;
}

.chat-dialog .chat-title
{
    background: #7097F2;
    cursor: pointer;
    height: 30px;
    width: 160px;
}

.chat-dialog .chat-title span
{
    background-position: 0 -48px;
    display: block;
    float: left;
    height: 16px;
    margin: 6px;
    width: 16px;
}

.chat-dialog .chat-title span.online
{
    background-position: 0 -64px;
}

.chat-dialog .chat-title p
{
    display: block;
    float: left;
    height: 16px;
    line-height: 16px;
    margin: 6px 0;
    width: auto;
}

.chat-dialog .chat-title button
{
    background-position: 0 -32px;
    border: 0;
    float: right;
    height: 16px;
    margin: 7px;
    padding: 0;
    width: 16px;
}

.chat-dialog .chat-title button:hover
{
    background-color: #FFFFFF;
    cursor: pointer;
}

.chat-dialog .avatar
{
    float: left;
    height: 32px;
    margin: 4px 8px 4px 0;
    position: relative;
    width: 32px;
}

.chat-dialog .avatar img
{
    margin-left: -8px;
    width: 48px;
}

.chat-dialog .chat-messages .chat-avatar:hover p
{
    display: block;
}

.chat-dialog .chat-display
{
    padding: 0 5px;
    width: 150px;
}

.chat-dialog .chat-messages
{
    border-top: 1px solid #EEEEEE;
    clear: both;
    font-size: 0.85em;
    margin-top: 3px;
}

.chat-dialog .chat-messages p
{
    margin: 0 0 0 42px;
    padding: 0;
    word-break: break-all;
}

.chat-dialog .chat-form
{
    height: 20px;
}

.chat-dialog .chat-input
{
    border: none;
    border-top: 1px solid #000000;
    border-radius: 0;
    bottom: 3px;
    box-shadow: none;
    height: 19px;
    margin: 0;
    outline: none;
    padding: 0 5px;
    width: 150px;
}

.chat-dialog .scroll-container
{
    height: 150px;
}

.chat-dialog .scroll-area
{
    margin: -3px 0;
    width: 160px;
}

#chat-name
{
    background: #333333;
    border-radius: 5px;
    color: #FFFFFF;
    height: 16px;
    left: -200px;
    line-height: 16px;
    margin: 12px 0 0 -132px;
    padding: 4px 8px;
    position: fixed;
}

#chat-name p
{
    margin: 0;
    padding: 0;
}

#chat-name .arrow
{
    border-color: transparent transparent transparent #333333;
    border-style: dashed dashed dashed solid;
    border-width: 8px;
    height: 0;
    position: absolute;
    right: -16px;
    top: 4px;
    width: 0;
}

/**
 * Search style
 */
input.gsc-input,
.gsc-input-box,
.gsc-input-box-hover,
.gsc-input-box-focus
{
    border-color: #D9D9D9;
}

input.gsc-search-button,
input.gsc-search-button:hover,
input.gsc-search-button:focus
{
    border-color: #2F5BB7;
    background-color: #357AE8;
    background-image: none;
}

tr.gsc-completion-selected
{
    background: transparent;
}

tr .gsq_a
{
    border: 1px solid #FFFFFF;
    border-radius: 5px;
    cursor: pointer;
    padding-left: 0.6em;
}

tr.gsc-completion-selected .gsq_a
{
    background: #DBEBFA;
    background: -webkit-gradient(linear, top left, bottom left, from(#DBEBFA), to(#CDE4F9));
    background: -webkit-linear-gradient(top, #DBEBFA, #CDE4F9);
    background: -moz-linear-gradient(top, #DBEBFA, #CDE4F9);
    background: -ms-linear-gradient(top, #DBEBFA, #CDE4F9);
    background: -o-linear-gradient(top, #DBEBFA, #CDE4F9);
    border: 1px solid #AEC9E5;
}

table.gsc-completion-container
{
    border: none;
    border: 1px solid #909090;
    border-top: none;
    border-radius: 0 0 5px 5px;
    box-shadow: 0 0 0 #000000, 0 -3px 3px #D3D3D3 inset;
    margin-top: -3px;
    padding: 5px 0;
}

#search
{
    margin: 4px 0 0 560px;
    position: absolute;
    height: 90px;
    width: 220px;
}

#search dl
{
    width: 95%;
}

#search label
{
    height: 20px;
    line-height: 20px;
}

#search input
{
    height: 20px;
    padding-right: 30px;
    width: 178px;
}

#search div
{
    width: auto;
}
/* ... */

